k8s/ors/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ors-frontend
  namespace: ors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ors-frontend
  template:
    metadata:
      labels:
        app: ors-frontend
    spec:
      containers:
        - name: ors-frontend
          image: northamerica-northeast1-docker.pkg.dev/phx-01j3dtrkz4x/openrouteservice/ui:main-7d49f97-1721903779 # {"$imagepolicy": "flux-system:ors"}
          ports:
            - containerPort: 3000
          command: ["deno", "run", "--allow-net", "--allow-read", "--allow-env", "src/server.ts"]
