k8s/ors/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ors-service
  namespace: ors
spec:
  selector:
    app: ors-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
