k8s/ors/frontend/test-pod-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ors
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
